project/manifests/debugPod.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-busybox
  labels:
    name: my-busybox
spec:
  containers:
  - name: busybox
    image: busybox
    command:
    - sleep
    - "3600"
    imagePullPolicy: IfNotPresent
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
  restartPolicy: Always
