project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crudapp-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crudapp
  template:
    metadata:
      labels:
        app: crudapp
    spec:
      volumes: 
      - name: image-pv
        persistentVolumeClaim:
          claimName: image-claim
      containers:
        - name: crudapp
          image: anmoltuni/crudapp:v1.13
          imagePullPolicy: Always
          ports:
          - containerPort: 9999
          volumeMounts:
          - name: image-pv
            mountPath: /tmp/image_cache/
