project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crudapp-svc
spec:
  type: ClusterIP
  selector:
    app: crudapp
  ports:
  - port: 3333    # PORT which u will enter in localhost:<port> request
    targetPort: 9999  # PORT which runs the service inside the cluster/container
    protocol: TCP
