project/manifests/todo-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
spec:
  selector:
    app: crudapp
  ports:
  - port: 1234
    targetPort: 3000
