project/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crudapp-ingress
spec:
  rules:
  - http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: todo-frontend-svc
            port: 
              number: 3333
      - path: "/todos"
        pathType: Prefix
        backend:
          service:
            name: todo-backend-svc
            port:
              number: 1234
